Fixes page height and centering issues on mobile

--- a/code_dex/static/code_dex/css/styles.css
+++ b/code_dex/static/code_dex/css/styles.css
@@ -129,6 +129,7 @@ footer {
 .file-view {
    overflow: auto;
    height: 100%;
+   min-height: 91.9vh;
 }
 
 .file-view > div {
